# animated-chatbot

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  main.cpp
config/: viseme_mapping.json
config/personalities/: calm.json  curious.json  enthusiastic.json  friendly.json  professional.json
src/avatar/: AvatarEngine.cpp  AvatarEngine.h  VisemeMapper.cpp  VisemeMapper.h
src/chat/: ChatEngine.cpp  ChatEngine.h  ConversationHistory.cpp  ConversationHistory.h
src/core/: Application.cpp  Application.h  EventBus.h
src/emotion/: EmotionDetector.cpp  EmotionDetector.h
src/personality/: PersonalityManager.cpp  PersonalityManager.h
src/tts/: PhonemeExtractor.cpp  PhonemeExtractor.h  TTSEngine.cpp  TTSEngine.h
src/ui/: AvatarViewport.cpp  AvatarViewport.h  MainWindow.cpp  MainWindow.h
